--- a/doc/c1.md
+++ b/doc/c1.md
@@ -1,8 +1,8 @@
 # C1 : Apresentação do projeto
 
 ## Descrição
-_Preparação de uma base de dados de suporte aos seus serviços e preenchimento da base de dados._
-_Desenvolvimento de uma camada de serviços REST para disponibilização de recursos para uma aplicação Web._
+_O trabalho consistiu na utilização de uma abordagem Design-first à construção de serviços web baseados numa arquitetura REST._
+_Adotou-se uma abordagem **Code-first** com recurso a tecnologias para desenvolvimento expedito de Serviços e Clientes, nomeadamente com o recurso à framework Loopback4 para o desenvolvimento expedito da API e à biblioteca React-Admin para o desenvolvimento expedito de um cliente web de backofice._
 _Apresenta os seguintes requisitos mínimos, propostos pelo docente:_
 1. Arquitetura de serviços do tipo REST;
 2. Utilização de pelo menos 4 verbos (métodos) do protocolo HTTP - CRUD (do inglês: Criar, Ler, Atualizar e Apagar);
@@ -12,10 +12,11 @@ _Apresenta os seguintes requisitos mínimos, propostos pelo docente:_
 6. Documentar a API com recurso ao formato OpenAPI 3.0;
 7. Disponibilizar uma ‘Collection’ para o Postman para consulta dos recursos;
 8. Utilização do MySQL como SGBD;
-9. Utilização de Node.js como servidor aplicacional para implementação da camada de serviços.
-10. Disponibilização de configuração para a aplicação multi-container (pelo menos duas imagens) MySQL + NodeJs. 
+9. Desenvolvimento de um cliente de backofice;
+10. Disponibilização de configuração para a aplicação multi-container (pelo menos duas imagens).
 11. Filtros através de parâmetros HTTP;
 12. Utilização de relação de cardinalidade m:n entre dois dos recursos;
+
 
 
 ## Group _01_
