--- a/doc/c2.md
+++ b/doc/c2.md
@@ -1,19 +1,33 @@
-# C2 : Recursos
+# C2 : Recursos ------------------------ VER !!!
 
-_Em cada recurso usamos diferentes verbos do protocolo HTTP (GET, POST e Delete) e apenas não será usado o verbo PUT porque a API em questão é apenas de consulta e não de inserção de dados._
-_Nesta API estão presentes 4 tipos de recursos diferentes:_
-* Filmes
-> Utiliza-se o verbo GET para apresentar todos os filmes que se encontram na base de dados e outro GET para ver informação de um filme através do id inserido do filme em questão. 
+_Cada recurso apresenta diferentes verbos do protocolo HTTP (GET, POST, DELETE, PUT, PATCH)._
+_Nesta API estão presentes 9 tipos de recursos diferentes:_
+* FilmesController
+> Dentro deste recurso estão presentes diferentes tipos de verbos. Um GET que mostra o filme por id, um DELETE que ilimina um filme através da escola de um id, etc. 
 
-* Genero
-> É utilizado também dois GETs, um para a visualização de todos os tipos de 'género' , assim como o seu 'id', o outro GET serve para ver através do id inserido qual o gênero do mesmo.
+* FilmesGeneroController
+> Este recurso é uma relação entre os filmes e gênero, isto é, quando se vê a informação de um filme o gênero que vai apresentar será o id correspondente da tabela gênero.
 
-* User
-> Podemos ver todos os users usando o primeiro GET, ou então, ver o user através da identificação do seu id.
+* FilmesListaFilmesController
+> ???
 
-* Favoritos
-> É utilizado um GET, POST e DELETE. O GET para visualizar um filme favorito através do seu id, o POST para adicionar novos filmes aos favoritos através do id, por fim usa-se um DELETE para apagar um filme dos favoritos com o id.
+* GeneroFilmesController
+> ???
 
+* ListaFilmeFilmesController
+> Depois de estar dentro de uma lista será possivel escolher os filmes que se querem colocar dentro dessa mesma lista.
+
+* ListaFilmeUserController
+> Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
+
+* PingController
+> Temos a obtenção do ping.
+
+* UserController
+> Mostra a informação do user pelo id.
+
+* UserListaFilmeController
+> ???  Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
 
 ---
 [< Previous](c1.md) | [^ Main](../../../) | [Next >](c3.md)
