--- a/doc/c4.md
+++ b/doc/c4.md
@@ -1,59 +1,102 @@
 # C4 : Apresentação
 
-_Add here the presentation elements. Be creative._
-
 ## Introdução
 _Esta API tem como âmbito o desenho e criação de um serviço web que permite a consulta de informação de filmes._
-_Para além da consulta de filmes também é possível ver a lista dos gêneros, users e os filmes favoritos de cada user._
+_Para além da consulta de filmes também é possível ver a lista dos gêneros, users e a lista de filmes de cada user._
 
 ## Recursos 
-_Foram usados 4 recursos:_
-* Filmes
-* Genero
-* User
-* Favoritos 
+_Foram usados 9 recursos:_
+* FilmesController
+* FilmesGeneroController
+* FilmesListaFilmesController
+* GeneroFilmesController
+* ListaFilmeFilmesController
+* ListaFilmeUserController
+* PingController
+* UserController
+* UserListaFilmeControler
 
 _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 
-#### Recurso - Filmes
+#### Recurso -  FilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Filmes                | ![Get Filmes](images/image4.png)       |
-| GET | /Filmes/{id}            | ![Get Filmes_id](images/image5.png)       |
+| GET | /Filmes                | ![Get Filmes](images/image.png)       |
+| GET | /Filmes/{id}            | ![Get Filmes_id](images/image.png)       |
 
 
-#### Recurso - Genero
+#### Recurso - FilmesGeneroController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Genero                | ![Get Genero](images/image6.png)       |
-| GET | /Genero/{id}            | ![Get Genero_id](images/image13.png)       |
+| GET | /Genero                | ![Get Genero](images/image.png)       |
+| GET | /Genero/{id}            | ![Get Genero_id](images/image.png)       |
 
 
-#### Recurso - User
+#### Recurso - FilmesListaFilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /User               | ![Get User](images/image14.png)       |
-| GET | /User/{id}            | ![Get User_id](images/image7.png)       |
+| GET | /User               | ![Get User](images/image.png)       |
+| GET | /User/{id}            | ![Get User_id](images/image.png)       |
 
 
-#### Recurso - Favoritos
+#### Recurso - GeneroFilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image8.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image11.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image12.png)       |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
+| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+
+
+#### Recurso - ListaFilmeFilmesController
+| Métodos                      | Caminho   | Resultado    |
+| ---------------------------- | ----------- | -----------  |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
+| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+
+
+#### Recurso - ListaFilmeUserController
+| Métodos                      | Caminho   | Resultado    |
+| ---------------------------- | ----------- | -----------  |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
+| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+
+
+#### Recurso - PingController
+| Métodos                      | Caminho   | Resultado    |
+| ---------------------------- | ----------- | -----------  |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+
+
+
+#### Recurso - UserController
+| Métodos                      | Caminho   | Resultado    |
+| ---------------------------- | ----------- | -----------  |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
+| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+
+
+#### Recurso - UserListaFilmeControler
+| Métodos                      | Caminho   | Resultado    |
+| ---------------------------- | ----------- | -----------  |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
+| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+
 
 
 ## Postman
 _Criação de uma 'Collection' no Portman._
 
-![Postman](images/image10.PNG)
+![Postman](images/image.PNG)
 
-## Docker
+## Docker --------------------- VER!!!
 
 _o multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
 
-## ERROS
+## ERROS --------------------- VER!!!
 _Quando fazemos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
 
 _O GET dos Favoritos está a dar erro como é possivel ver na imagem acima._
@@ -63,8 +106,8 @@ _O POST e DELETE diz que não temos permissões para o executar._
 _A conexão do node.js ao MySQL não se realiza._
 
 
-## Conclusão
-Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's e DELETE's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do Docker.
+## Conclusão ----------- VER
+Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do ???. 
 
 ---  
 [< Previous](c3.md) | [^ Main](../../../) | Next >
