--- a/doc/c4.md
+++ b/doc/c4.md
@@ -66,7 +66,7 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 #### Recurso - PingController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| GET | /Favoritos/{fav}                | ![Get Fav](images/image4.png)       |
 
 
 
