--- a/doc/c3.md
+++ b/doc/c3.md
@@ -18,7 +18,7 @@ A partir daí é só escrever o comando , no terminal
 
 Será dada um link, esse link irá abrir uma página no browser.
 
-![intalacao](images/image.png)
+![intalacao](images/image5.png)
 
 
 ## 3.3 Uso -------- VER!!!!
