--- a/doc/c4.md
+++ b/doc/c4.md
@@ -22,7 +22,7 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
 | GET | /Filmes                | ![Get Filmes](images/image.png)       |
-| GET | /Filmes/{id}            | ![Get Filmes_id](images/image.png)       |
+| DELETE | /Filmes/{id}            | ![Delete Filmes_id](images/image.png)       |
 
 
 #### Recurso - FilmesGeneroController
@@ -73,7 +73,7 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 #### Recurso - UserController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
+| GET | /user/count               | ![Get user_count](images/image10.png)       |
 | POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
 | DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
 
@@ -90,7 +90,7 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 ## Postman
 _Criação de uma 'Collection' no Portman._
 
-![Postman](images/image.PNG)
+![Postman](images/image14.PNG)
 
 ## Docker --------------------- VER!!!
 
