--- a/doc/c2.md
+++ b/doc/c2.md
@@ -2,6 +2,7 @@
 
 _Cada recurso apresenta diferentes verbos do protocolo HTTP (GET, POST, DELETE, PUT, PATCH)._
 _Nesta API estão presentes 9 tipos de recursos diferentes:_
+![System architecture](images/image8.png)
 * FilmesController
 > Dentro deste recurso estão presentes diferentes tipos de verbos. Um GET que mostra o filme por id, um DELETE que ilimina um filme através da escola de um id, etc. 
 
