--- a/doc/c4.md
+++ b/doc/c4.md
@@ -88,7 +88,7 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 
 
 ## Postman
-_Criação de uma 'Collection' no Portman._
+_Criação de uma 'Collection' no Postman que se encontra no [src folder](src/)._
 
 ![Postman](images/image14.PNG)
 
