--- a/doc/c3.md
+++ b/doc/c3.md
@@ -1,7 +1,7 @@
 # C3 : Produto
 
 
-## 3.1 Desenvolvimento 
+## 3.1 Desenvolvimento  --------- VER!!!!
 
 O nosso produto pode ser usado apartir da linha de comandos ou docker. Como se criou um multicontainer, isto é, um container mais do que duas imagens e nesse colocamos, como imagem, o node.js e a nossa database em MySQL, o produto pode ser acessado a partir do mesmo container
 
@@ -9,7 +9,7 @@ O nosso produto pode ser usado apartir da linha de comandos ou docker. Como se c
 
 ## 3.2 Instalação -------------------- VER !!!!
 
-_Fazer download da pasta main, deseguida abrir-la no VS Code,_
+_Fazer download da pasta main, deseguida abrir-la no VS Code._
 
 A partir daí é só escrever o comando , no terminal
 > lb4-filmes
@@ -24,6 +24,8 @@ Será dada um link, esse link irá abrir uma página no browser.
 ## 3.3 Uso -------- VER!!!!
 
 Este produto é apenas de consulta de dados, por isso, não é possível inserir novos dados à base de dados, o produto pode ser utilizado para consultar filmes, os seus géneros e adicionar filmes aos favoritos do utilizador.
+
+Podemos ver o seu funcionamento usando o Postman.
 
 ## 3.4 Detalhes de implementação
 
