--- a/doc/c2.md
+++ b/doc/c2.md
@@ -13,7 +13,7 @@ _Nesta API estão presentes 9 tipos de recursos diferentes:_
 > ???
 
 * GeneroFilmesController
-> ???
+> Este recurso é uma relação entre os géneros e filmes, isto é, quando se vê a informação de um género o filme que vai apresentar será o id correspondente da tabela filme.
 
 * ListaFilmeFilmesController
 > Depois de estar dentro de uma lista será possivel escolher os filmes que se querem colocar dentro dessa mesma lista.
