--- a/doc/c2.md
+++ b/doc/c2.md
@@ -10,7 +10,7 @@ _Nesta API estão presentes 9 tipos de recursos diferentes:_
 > Este recurso é uma relação entre os filmes e gênero, isto é, quando se vê a informação de um filme o gênero que vai apresentar será o id correspondente da tabela gênero.
 
 * FilmesListaFilmesController
-> ???
+> Este recurso é utilizado fornecendo um filme e com isso poderemos saber em que lista é que o mesmo se encontra.
 
 * GeneroFilmesController
 > Este recurso é uma relação entre os géneros e filmes, isto é, quando se vê a informação de um género o filme que vai apresentar será o id correspondente da tabela filme.
@@ -28,7 +28,7 @@ _Nesta API estão presentes 9 tipos de recursos diferentes:_
 > Mostra a informação do user pelo id.
 
 * UserListaFilmeController
-> ???  Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
+> ???Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
 
 ---
 [< Previous](c1.md) | [^ Main](../../../) | [Next >](c3.md)
