--- a/doc/c4.md
+++ b/doc/c4.md
@@ -94,20 +94,20 @@ _Criação de uma 'Collection' no Postman que se encontra no [src folder](src/).
 
 ## Docker --------------------- VER!!!
 
-_o multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
+_O multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
 
 ## ERROS --------------------- VER!!!
-_Quando fazemos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
+_Quando executamos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
 
-_O GET dos Favoritos está a dar erro como é possivel ver na imagem acima._
+_O GET dos Favoritos apresenta erro como é possivel ver na imagem acima._
 
-_O POST e DELETE diz que não temos permissões para o executar._
+_O POST e DELETE dizem que não temos permissões para os executar._
 
 _A conexão do node.js ao MySQL não se realiza._
 
 
 ## Conclusão ----------- VER
-Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do ???. 
+Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do Docker. 
 
 ---  
 [< Previous](c3.md) | [^ Main](../../../) | Next >
