--- a/doc/c4.md
+++ b/doc/c4.md
@@ -96,6 +96,10 @@ _Criação de uma 'Collection' no Postman que se encontra no [src folder](src/).
 
 _O multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
 
+## Loopback4 --------------------- VER!!!
+
+## React Admin --------------------- VER!!!
+
 ## ERROS --------------------- VER!!!
 _Quando executamos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
 
