--- a/doc/c4.md
+++ b/doc/c4.md
@@ -99,6 +99,7 @@ _O multicontainer está finalizado, é constituido por um container de node.js e
 ## Loopback4 --------------------- VER!!!
 
 ## React Admin --------------------- VER!!!
+_O React Admin é uma framework frontend que usa as nossas API's REST já existentes, permitindo assim criar aplicações frontend mais facilmente que interagem com a backend numa maneira standarizada através de data providers._
 
 ## ERROS --------------------- VER!!!
 _Quando executamos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
