--- a/doc/c4.md
+++ b/doc/c4.md
@@ -21,46 +21,45 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 #### Recurso -  FilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Filmes                | ![Get Filmes](images/image.png)       |
-| DELETE | /Filmes/{id}            | ![Delete Filmes_id](images/image.png)       |
+| GET | /filmes                | ![Get Filmes](images/image.png)       |
+| DELETE | /filmes/{id}            | ![Delete Filmes_id](images/image.png)       |
 
 
 #### Recurso - FilmesGeneroController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Genero                | ![Get Genero](images/image.png)       |
-| GET | /Genero/{id}            | ![Get Genero_id](images/image.png)       |
+| GET | /filmes/{id}/generos                | ![Get Genero](images/image.png)       |
+| GET | /filmes/{id}/generos            | ![Get Genero_id](images/image.png)       |
 
 
-#### Recurso - FilmesListaFilmesController
+#### Recurso - FilmesListaFilmeController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /User               | ![Get User](images/image.png)       |
-| GET | /User/{id}            | ![Get User_id](images/image.png)       |
+| GET | /filmes/{id}/lista-filmes               | ![Get User](images/image.png)       |
+| GET | /filmes/{id}/lista-filmes           | ![Get User_id](images/image.png)       |
 
 
 #### Recurso - GeneroFilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+| GET | /generos/{id}/filmes                | ![Get Fav](images/image.png)       |
+
 
 
 #### Recurso - ListaFilmeFilmesController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+| GET | /lista-filmes/{id}/filmes                | ![Get Fav](images/image.png)       |
+| POST | /lista-filmes/{id}/filmes             | ![Get Fav_id](images/image.png)       |
+| DELETE | /lista-filmes/{id}/filmes            | ![Get Fav_id_filmes](images/image.png)       |
 
 
 #### Recurso - ListaFilmeUserController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+| GET | /lista-filmes/{id}/user                | ![Get Fav](images/image.png)       |
+| POST | /lista-filmes/{id}/user            | ![Get Fav_id](images/image.png)       |
+| DELETE | /lista-filmes/{id}/user            | ![Get Fav_id_filmes](images/image.png)       |
 
 
 #### Recurso - PingController
@@ -73,17 +72,19 @@ _Em cada recurso estão implementados os verbos (métodos) do protocolo HTTP._
 #### Recurso - UserController
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /user/count               | ![Get user_count](images/image10.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+| GET | /users/count               | ![Get user_count](images/image10.png)       |
+| POST | /users            | ![Get Fav_id](images/image.png)       |
+| DELETE | /users/{id}            | ![Get Fav_id_filmes](images/image.png)       |
 
 
 #### Recurso - UserListaFilmeControler
 | Métodos                      | Caminho   | Resultado    |
 | ---------------------------- | ----------- | -----------  |
-| GET | /Favoritos/{fav}                | ![Get Fav](images/image.png)       |
-| POST | /Favoritos/{fav}{id_filme}            | ![Get Fav_id](images/image.png)       |
-| DELETE | /Favoritos/{fav}{id_filme}            | ![Get Fav_id_filmes](images/image.png)       |
+| GET | /users/{id}/lista-filme                | ![Get Fav](images/image.png)       |
+| POST | /users/{id}/lista-filme             | ![Get Fav_id](images/image.png)       |
+| DELETE | /users/{id}/lista-filme             | ![Get Fav_id_filmes](images/image.png)       |
+
+
 
 
 
@@ -97,6 +98,10 @@ _Criação de uma 'Collection' no Postman que se encontra no [src folder](src/).
 _O multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
 
 ## Loopback4 --------------------- VER!!!
+_O diagrama demonstra como o Loopback serve como uma ponte entre a entrada de solicitações e integrações de saída. Apresenta também os vários recursos fornecidos._
+
+
+![Loopback4](images/image15.PNG)
 
 ## React Admin --------------------- VER!!!
 _O React Admin é uma framework frontend que usa as nossas API's REST já existentes, permitindo assim criar aplicações frontend mais facilmente que interagem com a backend numa maneira standarizada através de data providers._
