--- a/doc/c4.md
+++ b/doc/c4.md
@@ -101,7 +101,7 @@ _O multicontainer está finalizado, é constituido por um container de node.js e
 _O diagrama demonstra como o Loopback serve como uma ponte entre a entrada de solicitações e integrações de saída. Apresenta também os vários recursos fornecidos._
 
 
-![Loopback4](images/image15.PNG)
+![Loopback4](images/image15.png)
 
 ## React Admin --------------------- VER!!!
 _O React Admin é uma framework frontend que usa as nossas API's REST já existentes, permitindo assim criar aplicações frontend mais facilmente que interagem com a backend numa maneira standarizada através de data providers._
