--- a/doc/c4.md
+++ b/doc/c4.md
@@ -103,6 +103,15 @@ _O diagrama demonstra como o Loopback serve como uma ponte entre a entrada de so
 
 ![Loopback4](images/image15.png)
 
+A API está separada entre várias camadas no LoopBack:
+
+* Os **controladores** representam os endpoints da nossa API. Esses endpoints terão que autenticar solicitações recebidas, analisar e validar, bem como orquestrar chamadas para Serviços e Repositórios.
+* Os **serviços** fornecem interfaces comuns para APIs e serviços externos. Isso permite invocar serviços externos sem mencionar detalhes de conexão todas as vezes. Os serviços também fornecem interfaces comuns para classes disponíveis localmente.
+* **Modelos** e **Relações** representam objetos de domínio e fornecem modelos de relacionamento de entidade.
+* Os **repositórios** representam a camada Entity para um modelo específico e tratam de todas as operações CRUD no modelo. Eles também usam repositório de outros modelos para lidar com relações de entidade.
+
+![Loopback4_1](images/image16.PNG)
+
 ## React Admin --------------------- VER!!!
 _O React Admin é uma framework frontend que usa as nossas API's REST já existentes, permitindo assim criar aplicações frontend mais facilmente que interagem com a backend numa maneira standarizada através de data providers._
 
