--- a/doc/c2.md
+++ b/doc/c2.md
@@ -4,7 +4,7 @@ _Cada recurso apresenta diferentes verbos do protocolo HTTP (GET, POST, DELETE, 
 _Nesta API estão presentes 9 tipos de recursos diferentes:_
 ![System architecture](images/image8.png)
 * FilmesController
-> Dentro deste recurso estão presentes diferentes tipos de verbos. Um GET que mostra o filme por id, um DELETE que ilimina um filme através da escola de um id, etc. 
+> Dentro deste recurso estão presentes diferentes tipos de verbos. Um GET que mostra o filme por id, um DELETE que ilimina um filme através da escolha de um id, etc. 
 
 * FilmesGeneroController
 > Este recurso é uma relação entre os filmes e gênero, isto é, quando se vê a informação de um filme o gênero que vai apresentar será o id correspondente da tabela gênero.
