--- a/doc/c4.md
+++ b/doc/c4.md
@@ -93,11 +93,11 @@ _Criação de uma 'Collection' no Postman que se encontra no [src folder](src/).
 
 ![Postman](images/image14.PNG)
 
-## Docker --------------------- VER!!!
+## Docker
 
 _O multicontainer está finalizado, é constituido por um container de node.js e outro de MySQL. Embora esteja finalizado a conexão do node.js à base de dados não se realiza. Já a conexão do MySQL em si não tem problemas._
 
-## Loopback4 --------------------- VER!!!
+## Loopback4 
 _O diagrama demonstra como o Loopback serve como uma ponte entre a entrada de solicitações e integrações de saída. Apresenta também os vários recursos fornecidos._
 
 
@@ -112,20 +112,21 @@ A API está separada entre várias camadas no LoopBack:
 
 ![Loopback4_1](images/image16.PNG)
 
-## React Admin --------------------- VER!!!
+> _Não está totalmente operacional_
+
+## React Admin
 _O React Admin é uma framework frontend que usa as nossas API's REST já existentes, permitindo assim criar aplicações frontend mais facilmente que interagem com a backend numa maneira standarizada através de data providers._
 
-## ERROS --------------------- VER!!!
-_Quando executamos o GET sem requisitos só faz display do primeiro mas se formos ao terminal do VS Code mostra todos._
+> _Não está a funcionar_
 
-_O GET dos Favoritos apresenta erro como é possivel ver na imagem acima._
+## ERROS 
 
-_O POST e DELETE dizem que não temos permissões para os executar._
+![Erro1](images/image17.png)
+![Erro2](images/image18.png)
+![Erro3](images/image19.png)
+![Erro4](images/image20.png)
 
-_A conexão do node.js ao MySQL não se realiza._
-
-
-## Conclusão ----------- VER
+## Conclusão
 Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do Docker. 
 
 ---  
