--- a/doc/c4.md
+++ b/doc/c4.md
@@ -127,7 +127,7 @@ _O React Admin é uma framework frontend que usa as nossas API's REST já existe
 ![Erro4](images/image20.png)
 
 ## Conclusão
-Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do Docker. 
+Com este trabalho conseguimos desenvolver a matéria lecionada na cadeira de Desenvolvimento Web I, aplicando a mesma num trabalho prático de desenvolvimento de uma aplicação e serviços web, usando GET's, POST's, DELETE's, PUT's e PATCH's nos recursos do trabalho. O maior problema encontrado na realização do trabalho foi a utilização do Docker acrescentando ainda que o loopback está terminado porém não funciona e que o React Admina está incompleto.
 
 ---  
 [< Previous](c3.md) | [^ Main](../../../) | Next >
