--- a/doc/c3.md
+++ b/doc/c3.md
@@ -1,13 +1,13 @@
 # C3 : Produto
 
 
-## 3.1 Desenvolvimento  --------- VER!!!!
+## 3.1 Desenvolvimento 
 
 O nosso produto pode ser usado apartir da linha de comandos ou docker. Como se criou um multicontainer, isto é, um container mais do que duas imagens e nesse colocamos, como imagem, o node.js e a nossa database em MySQL, o produto pode ser acessado a partir do mesmo container
 
 ![System architecture](images/image09.png)
 
-## 3.2 Instalação -------------------- VER !!!!
+## 3.2 Instalação 
 
 _Fazer download da pasta main, deseguida abrir-la no VS Code._
 
@@ -21,7 +21,7 @@ Será dada um link, esse link irá abrir uma página no browser.
 ![intalacao](images/image5.png)
 
 
-## 3.3 Uso -------- VER!!!!
+## 3.3 Uso 
 
 Este produto é apenas de consulta de dados, por isso, não é possível inserir novos dados à base de dados, o produto pode ser utilizado para consultar filmes, os seus géneros e adicionar filmes aos favoritos do utilizador.
 
@@ -38,7 +38,7 @@ _Objetivos mínimos exigidos cumpridos:_
 * Documentação a API com recurso ao formato OpenAPI 3.0;
 * Disponibilização de uma ‘Collection’ para o Postman para consulta dos recursos;
 * Utilização do MySQL como SGBD;
-* Desenvolvimento de um cliente de backofice;
+* Desenvolvimento de um cliente de backofice; - Incompleto
 * Disponibilização de configuração para a aplicação multi-container (pelo menos duas imagens).
 * Filtros através de parâmetros HTTP;
 * Utilização de relação de cardinalidade m:n entre dois dos recursos;
