--- a/doc/c2.md
+++ b/doc/c2.md
@@ -1,4 +1,4 @@
-# C2 : Recursos ------------------------ VER !!!
+# C2 : Recursos 
 
 _Cada recurso apresenta diferentes verbos do protocolo HTTP (GET, POST, DELETE, PUT, PATCH)._
 _Nesta API estão presentes 9 tipos de recursos diferentes:_
@@ -28,7 +28,7 @@ _Nesta API estão presentes 9 tipos de recursos diferentes:_
 > Mostra a informação do user pelo id.
 
 * UserListaFilmeController
-> ???Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
+> Dentro da lista de um User pode-se escolher um ou mais filmes para colocar dentro de uma lista.
 
 ---
 [< Previous](c1.md) | [^ Main](../../../) | [Next >](c3.md)
