--- a/doc/c3.md
+++ b/doc/c3.md
@@ -12,7 +12,7 @@ O nosso produto pode ser usado apartir da linha de comandos ou docker. Como se c
 _Fazer download da pasta main, deseguida abrir-la no VS Code._
 
 A partir daí é só escrever o comando , no terminal
-> lb4-filmes
+> cd lb4-filmes
 
 > npm start
 
